testsuite/tests/typecheck/should_fail/T16512b.stderr

T16512b.hs:6:3: error:
    • Type family equation violates the family's injectivity annotation.
      Type variable ‘a’ cannot be inferred from the right-hand side.
      Using UndecidableInstances might help
      In the type family equation:
        G [a] = [G a] -- Defined at T16512b.hs:6:3
    • In the equations for closed type family ‘G’
      In the type family declaration for ‘G’
